# CthulhuRs

./: .gitignore  LICENSE  README.md
cthulhu-scope-extension/: .env  babel.config.js  package.json  vue.config.js
cthulhu-scope-extension/src/: manifest-v2.json  manifest.json
cthulhu-scope-extension/src/_locales/zh_CN/: messages.json
cthulhu-scope-extension/src/api/: common.js  exten.js  server.js
cthulhu-scope-extension/src/background/: main.js
cthulhu-scope-extension/src/popup/: App.vue  global.css  index.html  main.js
cthulhu-scope-extension/src/utils/: Const.js  axios.js  request.js  util.js
cthulhu-server/: .gitignore  Cargo.toml  config.json  cthulhu.db
cthulhu-server/ca/: ca.cer  ca.key
cthulhu-server/content-security-policy/src/: lib.rs
cthulhu-server/sql/: data.sql  init.sql
cthulhu-server/src/: core.rs  ja3.rs  macros.rs  main.rs  proxy.rs  rcgen.rs  utils.rs
cthulhu-server/src/handle/: mod.rs  model.rs  net_agent.rs  plugin_web.rs  socket.rs  web.rs
cthulhu-server/src/handle/api/: config.rs  mod.rs  plugin.rs  server.rs
cthulhu-server/src/jsbind/: console.rs  file.rs  http.rs  mod.rs  server.rs  store.rs  timer.rs  utils.rs  ws.rs
cthulhu-server/src/net_proxy/: decoder.rs  error.rs  mod.rs  rewind.rs
cthulhu-server/src/net_proxy/certificate_authority/: mod.rs  rcgen_authority.rs
cthulhu-server/src/net_proxy/proxy/: mod.rs  net.rs
cthulhu-server/workspace/: content.js  worker.js
cthulhu-server/workspace/iframe/assets/: Func.css  IconBtn.css  Index2.css  Intro.css  List.css  Log.css  Setting.css  Store.css  SubPage.css  index.css  index.js
cthulhu-server/workspace/iframe/chunks/: Func.js  Home.js  IconBtn.js  Index.js  Intro.js  List.js  Log.js  Setting.js  Store.js  SubPage.js  SvgIcon.js  api.js  local.js
cthulhu-server/workspace/inject/: inject.js  main.css
cthulhu-web/iframe/: .env  index.html  package.json  vite.config.js
cthulhu-web/iframe/src/: App.vue  config.js  local.js  main.js  router.js  store.js  style.css
cthulhu-web/iframe/src/api/: api.js
cthulhu-web/iframe/src/components/: IconBtn.vue  Plugin.vue  Struct.vue  SvgIcon.vue  Tabs.vue  TextBtn.vue
cthulhu-web/iframe/src/pages/: Index.vue
cthulhu-web/iframe/src/pages/home/: Home.vue  Intro.vue  List.vue  Setting.vue
cthulhu-web/iframe/src/plugins/: builder.js
cthulhu-web/iframe/src/subPages/: Func.vue  Log.vue  PluginEdit.vue  Store.vue  SubPage.vue
cthulhu-web/iframe/src/utils/: consts.js  http.js  patterns.js  utils.js
cthulhu-web/inject/: index.html  package.json  vite.config.js
cthulhu-web/inject/src/: App.vue  More.vue  main.js
