[package]
name = "cthulhu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
async-compression = { version = "0.4.0", features = ["tokio", "brotli", "gzip", "zlib", "zstd"] }
tokio = { version = "1.24.2", features = ["full"] }

tokio-util = { version = "0.7.10", features = ["full"] }
tokio-rustls = { version = "0.24.1", features = ["default"] }
tokio-tungstenite = { version = "0.20.0", features = ["default","native-tls","__rustls-tls"] }


hyper = { version = "0.14.28", features = ["full","tcp"] }
hyper-rustls = { version = "0.24.2", features = [
    "http1",
    "http2",
    "logging",
    "tls12",
    "rustls-native-certs",
] }
hyper-tungstenite = "0.11.1"
headers = "0.3"
reqwest = { version = "0.11.24", features = ["json","__rustls","__tls","cookies"] }

rustls = { version = "0.21.6", features = ["default"] }
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.0"

moka = { version = "0.12.0", features = ["future"] }



bstr = "1.0.0"
time = "0.3.34"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

rcgen ={version = "0.11.3",features = ["x509-parser","pem"]}
rsa = "0.9.2"
rand = "0.8.5"
ring = "0.16.20"
pem = { version = "2.0.1" }


futures = "0.3.29"


local-ip-address = "0.5.6"


thiserror = "1.0.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }



[target.'cfg(windows)'.dependencies]
# 这个依赖只会在Windows平台上包含
winreg = "0.51.0"


# [target.x86_64-unknown-linux-musl]
# linker = "rust-lld"

